seccomp/podfile-deny-seccomp-profile.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pause-seccomp
  labels:
    app: pause-seccomp
spec:
  containers:
  - name: pause
    image: k8s.gcr.io/pause
  securityContext:
    seccompProfile:
      type: Unconfined
